[package]
name = "rust_raytracing"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "raytracer"
path = "src/main.rs"

[lib]
name = "raytracer"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitcode = "1.1.2"
rand = "0.8.5"
libm = "0.2.2"
map_3d = "0.1.4"
configparser = "3.0.0"

[dependencies.uuid]
uuid = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]